--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>YOUR NAME</h1>
+			<h1>PRASANNA P</h1>
 			<hr>
-			YOUR TITLE
+			web developer
 			<hr>
 		</header>
 		<main>
@@ -20,15 +20,15 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:your-email@example.com">your-email@example.com</a>
+                        <a href="mailto:your-email@example.com">your-princeprasanna123@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/gh-username">gh-username</a>
+                        <a href="github.com/gh-username">gh-prasanna</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/linkedin-username">linkedin-username</a>
+                        <a href="linkedin.com/linkedin-username">linkedin-prasanna</a>
                     </p>
 				</section>
 				<section>
@@ -39,12 +39,12 @@
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>YOUR MAJOR</h3>
+                    <h3>MCA</h3>
                     <p>
-                        Your university or school
+                       presidency university
                     </p>
                     <p>
-                        2018-2022
+                        2023-2025
                     </p>
 				</section>            
 			</article>
@@ -59,7 +59,7 @@
 					<!-- your work experience -->
                     <h3>JOB TITLE</h3>
                     <p>
-                            Company Name | 2008 - 2010
+                            infosys | 2022 - 2023
                     </p>
                     <p>
                             Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
