--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>PRASANNA P</h1>
+			<h1>CHETHAN P</h1>
 			<hr>
 			web developer
 			<hr>
